--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,20 @@
 .logo{
     display: flex;
     justify-content: center;
-    margin-top: 150px;
+    margin-top: 90px;
 }
 .description{
     display: flex;
     justify-content: center;
+    font-weight: 500;
+    font-size: medium;
+}
+.description > p >span{
+    font-weight: 900;
+    font-size: large;
+}
+.container{
+    background-image: url("images/landing.jpg");
+    height: 100v;
+    padding: 20px;
 }
