--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     background-image: url("images/landing.jpg");
     background-size: cover;
     border: 2px solid white;
+
 }
 
 .logo {
@@ -68,7 +69,7 @@
 
 /*  */
 .takeaway {
-    margin-bottom: 200px;
+    margin-top: 100px;
 }
 
 .beverages {
@@ -87,39 +88,10 @@
     justify-content: space-evenly;
 }
 
-#one {
-    border: 2px solid grey;
-    width: 200px;
-    height: 50px;
-    text-align: center;
-}
 
-#two {
-    border: 2px solid grey;
-    width: 200px;
-    height: 50px;
-    text-align: center;
-    background-color: grey;
-}
-
-#three {
-    border: 2px solid grey;
-    width: 200px;
-    height: 50px;
-    text-align: center;
-    background-color: grey;
-}
-
-#four {
-    border: 2px solid grey;
-    width: 200px;
-    height: 50px;
-    text-align: center;
-    background-color: grey;
-}
 
 .brand {
-    border: 2px solid grey;
+    /* border: 2px solid grey; */
     padding: 100px;
     margin-bottom: 100px;
 
@@ -131,7 +103,7 @@
     display: flex;
     justify-content: space-evenly;
     margin-bottom: 100px; */
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 }
 
@@ -166,4 +138,26 @@
     top: 30px;
     border-left: 1px solid grey;
     height: 100px;
+}
+
+.subdivisions {
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #F15A29;
+    height: 200px;
+    
+}
+
+.subdivisions>div {
+    background-color: #f1f1f1;
+    margin: 1px;
+    padding: 20px;
+    font-size: 30px;
+    width: 400px;
+    text-align: center;
+}
+.burger{
+    background-image: url("images/foodsBg.jpg");
+    height: 90vh;
+    background-repeat: no-repeat;
 }
